--- a/templates/base.html
+++ b/templates/base.html
@@ -3,60 +3,45 @@
   <head>
     {% block head %}
     <title>{% block title %}{% endblock %} - Music Flask</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap.css') }}">
-    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='custom_css/main.css') }}">
-    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='bootstrap-3.3.7/css/bootstrap.css') }}">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='bootstrap-3.3.7/css/bootstrap-theme.min.css') }}">
+    <!--keep jquery before bootstrap-->
+    <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap-3.3.7/js/bootstrap.min.js') }}"></script>
     {% endblock %}
   </head>
   <body>
 <!--NavBar-->
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="https://github.com/pykiki/music_flask">Pykiki</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            {% if pagename == "download" %}
-              <li class="active"><a href="/">Download<span class="sr-only">(current)</span></a></li>
-              <li><a href="/music">Musics</a></li>
-            {% else %}
-              <li><a href="/">Download<span class="sr-only">(current)</span></a></li>
-              <li class="active"><a href="/music">Musics</a></li>
-            {% endif %}
-          </ul>
-          <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Search</button>
-          </form>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+ <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="https://github.com/pykiki/music_flask">Pykiki</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        {% if pagename == "download" %}
+          <li class="active"><a href="/">Download<span class="sr-only">(current)</span></a></li>
+          <li><a href="/music">Musics</a></li>
+        {% else %}
+          <li><a href="/">Download<span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="/music">Musics</a></li>
+        {% endif %}
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <!--NavBar-->
 
 <!--content-->
