--- a/music_flask/templates/base.html
+++ b/music_flask/templates/base.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://github.com/pykiki/music_flask">Pykiki</a>
+      <a class="navbar-brand" href="https://github.com/pykiki/music_flask">Music Flask {{ app_version }}</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
