brake into pieces html template + fix no-playlist option use in youtube-dl + add things to prepare progress status

--- a/music_flask/templates/main.html
+++ b/music_flask/templates/main.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 {% block title %}Download{% endblock %}
+{% block head %}
+  <script>
+  var source = new EventSource("/progress");
+  source.onmessage = function(event) {
+    $('.progress-bar').css('width', event.data+'%').attr('aria-valuenow', event.data);
+    $('.progress-bar-label').text(event.data+'%');
+
+    if(event.data == 100){
+      source.close()
+    }
+  }
+  </script>
+
+{% endblock %}
 {% block content %}
     <div class="container">
       <div style='text-align: center;'>
@@ -24,6 +38,16 @@
         <button type="submit" class="btn btn-success">Download</button>
       </form>
       <br/>
+
+  <div class="progress" style="width: 50%; margin: 50px;">
+    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+      <span class="progress-bar-label">0%</span>
+    </div>
+  </div>
+</div>
+
+
+
       <br/>
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
