--- a/music_flask/templates/base.html
+++ b/music_flask/templates/base.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    {% block head %}
     <title>{% block title %}{% endblock %} - Music Flask</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,55 +10,14 @@
     <!--keep jquery before bootstrap-->
     <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap-3.3.7/js/bootstrap.min.js') }}"></script>
-    {% endblock %}
+    {% block head %}{% endblock %}
   </head>
   <body>
-<!--NavBar-->
- <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="https://github.com/pykiki/music_flask/tree/{{ app_version }}">Music Flask {{ app_version }}</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        {% if pagename == "download" %}
-          <li class="active"><a href="/">Download<span class="sr-only">(current)</span></a></li>
-          <li><a href="/music">Musics</a></li>
-        {% else %}
-          <li><a href="/">Download<span class="sr-only">(current)</span></a></li>
-          <li class="active"><a href="/music">Musics</a></li>
-        {% endif %}
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!--NavBar-->
-
+<!--navbar-->
+    {% include 'navbar.html' %}
 <!--content-->
     <div id="content">{% block content %}{% endblock %}</div>
-<!--content-->
-    
 <!--Footer-->
-		<footer class="footer font-small mdb-color lighten-3 pt-4 mt-4">
-			<!--Copyright-->
-      <div class="col-md-12">
-        <div class="footer-copyright py-3 text-center">
-          {% block footer %}
-          &copy; Copyright 2018 by <a href="https://github.com/pykiki/">Alain Maibach</a>.
-          {% endblock %}
-        </div>
-      </div>
-			<!--/.Copyright-->
-		</footer>
-<!--/.Footer-->
+    {% include 'footer.html' %}
   </body>
 </html>
